# iot-aux6-protobuf

./: .gitignore  README.md  packet.options  packet.proto  tcp_server.py
main/: .gitignore  CMakeLists.txt  credentials.h  main.c
server/: .gitignore  main.py
